Version CVS HEAD (?)
  * SoundFont file format
    - initial implementation
    - changed region lookup API to avoid malloc in RT threads

  * src/RIFF.cpp, src/RIFF.h:
    - bugfix: avoid calling read() with count 0 when writing a file,
      as this may hang on some systems

Version 3.3.0 (30 Jul 2009)

  * general changes:
    - fixed compilation with gcc 4.3
    - fixes for building with Visual C++
    - minor fix in configure for building DLL on Windows

  * src/gig.cpp, src/gig.h:
    - added partial support for MIDI rules, only the Controller
      Triggered rule is supported so far
    - bugfix: removed another iterator invalidation in DeleteSample
    - bugfix in Sample::LoadSampleData*(): reset sample read position to
      sample start before trying to (re)load sample data from file (#82)
    - bugfix: EG3 depth parameter was not saved correctly
    - fixed crash which occured when streaming a gig sample with
      bi-directional (a.k.a. 'pingpong') loop type (fixes #102)

  * src/RIFF.cpp, src/RIFF.h:
    - bugfix: saving to the same file after the file size had been
      increased made the file corrupt (#82)
    - bugfix: refuse Chunk::Read() in case chunk has just been added, that
      is not written physically yet (#82)
    - bugfix: saving to the same file after the file size had been
      decreased sometimes also made the file corrupt!
    - bugfix: undefined behavior (e.g. endless loop) when opening zero
      length files, now throws a RIFF::Exception instead (fixes bug #121)
    - bugfix: destructor for base class RIFF::Chunk accessed members
      of derived class RIFF::File, which is bad, and caused crashes
      when using Visual C++
    - bugfix: files that contain zero length RIFF lists were not read
      correctly (fixes #127) (bug was introduced 2009-03-13)

Version 3.2.1 (5 Dec 2007)

  * src/RIFF.cpp, src/RIFF.h:
    - avoid Windows to perform unnecessary file stream caching which would